# super-bazooka

./: .gitignore  CLAUDE.md  PLAN.md  README.md  README_zh.md  canvas-design-philosophy.md  dev.bat  dev.ps1  index.html  install-claude-plugins.sh  package-lock.json  package.json  playwright.config.ts  search-results.md  vite.config.e2e.ts  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.doc-generator/: analysis.json  dashboard.html  knowledge-graph.json  项目全景.html
.github/workflows/: ci.yml  release.yml
doc/: 架构图.md  配置参考.md
doc/modules/: Rust-Tauri命令.md  Rust-会话管理.md  Rust-入口.md  Rust-协议解析.md  Rust-后端.md  Rust-数据库.md  Rust-进程管理.md  composables.md  lib.md  stores.md  前端-Lib.md  前端-Store.md  前端-会话.md  前端-会话侧栏.md  前端-共享.md  前端-国际化.md  前端-布局.md  前端-文件.md  前端-样式.md  前端-组合式函数.md  前端-聊天.md  前端-设置.md  前端-路由.md
docs/: COMMAND-PALETTE-PLAN.md  PHASE8-PLAN.md  变更记录.md  目录.md
docs/analysis/: 独自完成可行性分析.md
docs/reviews/: 代码质量审查.md
docs/分析/: PONYTAIL-ANALYSIS.md  官方插件库分析报告.md
docs/审查/: 代码质量审查.md
docs/知识/: CC-DEEPSEEK-BOOTSTRAP.md  (+5 more)
e2e/: chat-flow.spec.ts  real-stream.spec.ts  visual.spec.ts
scripts/: _query_db.py  _query_plan.py  deepseek-proxy.cjs  dev.sh  inspect_ui.py  record_claude_output.sh  ui_report.json
src/: App.vue  main.ts  test-setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  git.rs  lib.rs  main.rs  process.rs  protocol.rs  provider.rs  session.rs
src-tauri/tests/: integration_test.rs  protocol_test.rs  resume_test.rs
(+93 files in other folders)
