[package]
name = "cc-gui"
version = "0.1.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
